--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,6 +11,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-height: 100svh;
+  max-height: 100svh;
+  min-width: 100svw;
+  max-width: 100svw;
 }
 
 code {
@@ -18,8 +22,8 @@ code {
     monospace;
 }
 #root {
-  min-height: 100vh;
-  max-height: 100vh;
-  min-width: 100vw;
-  max-width: 100vw;
+  min-height: 100%;
+  max-height: 100%;
+  min-width: 100%;
+  max-width: 100%;
 }
