--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,6 +15,7 @@ body {
   max-height: 100svh;
   min-width: 100svw;
   max-width: 100svw;
+    overflow: hidden;
 }
 
 code {
@@ -22,8 +23,6 @@ code {
     monospace;
 }
 #root {
-  min-height: 100%;
-  max-height: 100%;
-  min-width: 100%;
-  max-width: 100%;
+  height: 100%;
+  width: 100%;
 }
